packages/native/include/opentui.h


#define OT_CONTEXT_ABI_VERSION UINT32_C(1)
typedef int32_t ot_status;
typedef struct ot_context ot_context;
typedef struct ot_handle {
    uint64_t context_id;
    uint32_t slot;
    uint32_t generation;
} ot_handle;
typedef struct ot_styled_text_chunk {
    uint32_t struct_size;
    uint32_t abi_version;
    uint32_t byte_count;
    uint32_t flags;
    uint16_t foreground[4];
    uint16_t background[4];
    uint32_t attributes;
    uint32_t reserved;
    uint32_t link_offset;
    uint32_t link_byte_count;
} ot_styled_text_chunk;
typedef struct ot_scene_paint_options {
    uint32_t struct_size;
    uint32_t abi_version;
    int32_t z_index;
    float opacity;
    double translate_x;
    double translate_y;
    uint32_t border_sides;
    uint32_t should_fill;
    uint16_t background[4];
    uint16_t border_color[4];
    uint32_t border_style;
    uint32_t focusable;
    uint16_t focused_border_color[4];
    uint32_t reserved;
} ot_scene_paint_options;
typedef struct ot_scene_frame_request {
    uint32_t struct_size;
    uint32_t abi_version;
    ot_handle session;
    ot_handle root;
    ot_handle node;
    uint64_t frame_id;
    uint64_t request_id;
    uint64_t layout_epoch;
    uint64_t hook_generation;
    uint32_t kind;
    uint32_t num;
    uint32_t width;
    uint32_t height;
    uint32_t reserved[2];
} ot_scene_frame_request;
ot_status ot_scene_frame_cancel(ot_context *, const ot_handle *session, uint64_t frame_id);
ot_status ot_scene_create_node(ot_context *, const ot_handle *session, uint32_t kind,
    uint32_t num, ot_handle *out_node);
ot_status ot_scene_destroy_node(ot_context *, const ot_handle *node);
ot_status ot_scene_move_node(ot_context *, const ot_handle *node, const ot_handle *parent, uint32_t index);
ot_status ot_scene_set_style(ot_context *, const ot_handle *node, uint32_t group,
    uint32_t kind, uint32_t edge, uint32_t unit, float value, uint32_t flags);
ot_status ot_scene_set_paint(ot_context *, const ot_handle *node, const ot_scene_paint_options *);
ot_status ot_scene_set_text(ot_context *, const ot_handle *node, const uint8_t *bytes, uint32_t byte_count);
ot_status ot_scene_set_styled_text(ot_context *, const ot_handle *node,
    const uint8_t *bytes, uint32_t byte_count, const ot_styled_text_chunk *chunks, uint32_t chunk_count,
    const uint8_t *urls, uint32_t url_byte_count);
ot_status ot_scene_get_text(ot_context *, const ot_handle *node, uint8_t *bytes, uint32_t capacity, uint32_t *out_count);
ot_status ot_scene_paint(ot_context *, const ot_handle *session, const uint16_t background[4], uint32_t use_mouse, uint32_t excluded_hit_num, ot_scene_frame_request *out_frame);
ot_status ot_scene_hit_test(ot_context *, const ot_handle *session, int32_t x, int32_t y, uint32_t *out_num);
typedef struct ot_session_options {
    uint32_t struct_size;
    uint32_t abi_version;
    uint32_t chunk_size;
    uint32_t span_capacity;
    uint64_t max_bytes;
    uint32_t control_capacity;
    uint32_t reserved;
} ot_session_options;
typedef struct ot_output_ticket {
    ot_handle session;
    uint64_t request_id;
    uint32_t byte_count;
    uint32_t reserved;
} ot_output_ticket;
typedef struct ot_session_renderer_env_options {
    uint32_t struct_size;
    uint32_t abi_version;
    uint32_t width;
    uint32_t height;
    uint32_t remote_mode;
    uint32_t entry_count;
    uint32_t byte_count;
    uint32_t reserved;
} ot_session_renderer_env_options;
typedef struct ot_session_renderer_state {
    uint32_t struct_size;
    uint32_t abi_version;
    uint32_t width;
    uint32_t height;
    uint64_t frame_count;
    uint32_t frame_pending;
    uint32_t reserved;
} ot_session_renderer_state;
ot_status ot_scene_frame_commit(ot_context *, const ot_handle *session,
    const ot_scene_frame_request *frame_request, uint32_t force, uint32_t *out_status);
typedef struct ot_session_terminal_options {
    uint32_t struct_size;
    uint32_t abi_version;
    uint32_t flags;
    uint32_t kitty_keyboard_flags;
} ot_session_terminal_options;
typedef struct ot_session_pump_result {
    uint32_t struct_size;
    uint32_t abi_version;
    uint32_t status;
    uint32_t reserved;
    uint64_t deadline_ns;
} ot_session_pump_result;
typedef struct ot_context_options {
    uint32_t struct_size;
    uint32_t abi_version;
    uint32_t flags;
    uint32_t object_capacity;
    uint32_t render_cells_max;
    uint32_t reserved[3];
} ot_context_options;
typedef struct ot_context_error {
    uint32_t struct_size;
    uint32_t abi_version;
    ot_status status;
    uint32_t reserved;
} ot_context_error;
uint32_t ot_context_abi_version(void);
ot_status ot_context_create(const ot_context_options *options, ot_context **out_context);
ot_status ot_context_destroy(ot_context *context);
ot_status ot_context_get_last_error(ot_context *context, ot_context_error *out_error);
ot_status ot_session_create(
    ot_context *context,
    const ot_session_options *options,
    ot_handle *out_session);
ot_status ot_session_attach_renderer_with_env(
    ot_context *context,
    const ot_handle *session,
    const ot_session_renderer_env_options *options,
    const uint8_t *environment);
ot_status ot_session_render(
    ot_context *context,
    const ot_handle *session,
    uint32_t force,
    uint32_t *out_result);
ot_status ot_session_resize_renderer(
    ot_context *context,
    const ot_handle *session,
    uint32_t width,
    uint32_t height);
ot_status ot_session_get_renderer_state(
    ot_context *context,
    const ot_handle *session,
    ot_session_renderer_state *out_state);
ot_status ot_session_setup_terminal(
    ot_context *context,
    const ot_handle *session,
    const ot_session_terminal_options *options);
ot_status ot_session_get_terminal_state(ot_context *context, const ot_handle *session, uint32_t *out_phase);
ot_status ot_session_pump(
    ot_context *context,
    const ot_handle *session,
    uint64_t now_ns,
    uint32_t work_budget,
    ot_session_pump_result *out_result);
ot_status ot_session_write(
    ot_context *context,
    const ot_handle *session,
    const uint8_t *bytes,
    uint32_t byte_count);
ot_status ot_session_read_output(
    ot_context *context,
    const ot_handle *session,
    uint8_t *bytes,
    uint32_t capacity,
    ot_output_ticket *out_ticket);
ot_status ot_session_complete_output(
    ot_context *context,
    const ot_handle *session,
    const ot_output_ticket *ticket,
    uint32_t success);
ot_status ot_session_close(ot_context *context, const ot_handle *session);
ot_status ot_session_cancel(ot_context *context, const ot_handle *session);
ot_status ot_session_get_state(ot_context *context, const ot_handle *session, uint32_t *out_state);
ot_status ot_session_destroy(ot_context *context, const ot_handle *session);